--- a/public/css/funky.css
+++ b/public/css/funky.css
@@ -1,16 +1,7 @@
-@import('https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.0/css/bootstrap.min.css') 
-
-
-
-.funkyradio div {
-  clear: both;
-  overflow: hidden;
-}
-
 .funkyradio label {
   width: 100%;
   border-radius: 4px;
-  border: 1px solid #454545;
+  border: 1px solid #ccc;
   font-weight: normal;
   color: #939393;
 }
@@ -62,6 +53,7 @@
 .funkyradio input[type="radio"]:checked ~ label,
 .funkyradio input[type="checkbox"]:checked ~ label {
   color: #000;
+  background: #eecc00;
 }
 
 .funkyradio input[type="radio"]:checked ~ label:before,
@@ -117,135 +109,3 @@
 .funkyradio {
 margin-bottom: 5px;
 }
-
-/* SCSS STYLES */
-/*
-.funkyradio {
-
-    div {
-        clear: both;
-        overflow: hidden;
-    }
-
-    label {
-        width: 100%;
-        border-radius: 3px;
-        border: 1px solid #D1D3D4;
-        font-weight: normal;
-    }
-
-    input[type="radio"],
-    input[type="checkbox"] {
-
-        &:empty {
-            display: none;
-
-            ~ label {
-                position: relative;
-                line-height: 2.5em;
-                text-indent: 3.25em;
-                margin-top: 2em;
-                cursor: pointer;
-                user-select: none;
-
-                &:before {
-                    position: absolute;
-                    display: block;
-                    top: 0;
-                    bottom: 0;
-                    left: 0;
-                    content: '';
-                    width: 2.5em;
-                    background: #D1D3D4;
-                    border-radius: 3px 0 0 3px;
-                }
-            }
-        }
-
-        &:hover:not(:checked) ~ label {
-            color: #888;
-
-            &:before {
-                content: '\2714';
-                text-indent: .9em;
-                color: #C2C2C2;
-            }
-        }
-
-        &:checked ~ label {
-            color: #777;
-
-            &:before {
-                content: '\2714';
-                text-indent: .9em;
-                color: #333;
-                background-color: #ccc;
-            }
-        }
-
-        &:focus ~ label:before {
-            box-shadow: 0 0 0 3px #999;
-        }
-    }
-
-    &-default {
-        input[type="radio"],
-        input[type="checkbox"] {
-            &:checked ~ label:before {
-                color: #333;
-                background-color: #ccc;
-            }
-        }
-    }
-
-    &-primary {
-        input[type="radio"],
-        input[type="checkbox"] {
-            &:checked ~ label:before {
-                color: #fff;
-                background-color: #337ab7;
-            }
-        }
-    }
-
-    &-success {
-        input[type="radio"],
-        input[type="checkbox"] {
-            &:checked ~ label:before {
-                color: #fff;
-                background-color: #5cb85c;
-            }
-        }
-    }
-
-    &-danger {
-        input[type="radio"],
-        input[type="checkbox"] {
-            &:checked ~ label:before {
-                color: #fff;
-                background-color: #d9534f;
-            }
-        }
-    }
-
-    &-warning {
-        input[type="radio"],
-        input[type="checkbox"] {
-            &:checked ~ label:before {
-                color: #fff;
-                background-color: #f0ad4e;
-            }
-        }
-    }
-
-    &-info {
-        input[type="radio"],
-        input[type="checkbox"] {
-            &:checked ~ label:before {
-                color: #fff;
-                background-color: #5bc0de;
-            }
-        }
-    }
-}
-*/
