fin de formulario

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5992,11 +5992,11 @@ body {
     font-size: 14px;
     line-height: 1.42857143;
     color: #646363;
-    background-color: #ffffff
+    background-color: #ffffff;
 }
 
 p, a, label, span {
-    font-size: 14px;
+    /* font-size: 14px; */
 }
 
 a:hover, a:active, a:focus {
