--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -17,30 +17,27 @@
     <link type="text/css" rel="stylesheet" href="{{ base_url() }}/css/font-awesome.css">
     <link type="text/css" rel="stylesheet" href="{{ base_url() }}/libs/bootstrap-3.3.5/css/bootstrap.css">
     <link type="text/css" rel="stylesheet" href="{{ base_url() }}/css/style.css?v=1.9">
-        <link type="text/css" rel="stylesheet" href="{{ base_url() }}/css/funky.css?v=1.9">
+    <link type="text/css" rel="stylesheet" href="{{ base_url() }}/css/funky.css?v=1.9">
     <link type="text/css" rel="stylesheet" href="{{ base_url() }}/css/owl.carousel.css">
     <link type="text/css" rel="stylesheet" href="{{ base_url() }}/css/modals.css">
     <link type="text/css" rel="stylesheet" href="{{ base_url() }}/css/jquery.dataTables.min.css">
-    <link type="text/css" rel="stylesheet"
-          href="https://cdn.datatables.net/buttons/1.6.2/css/buttons.dataTables.min.css">
+    <link type="text/css" rel="stylesheet" href="https://cdn.datatables.net/buttons/1.6.2/css/buttons.dataTables.min.css">
     <script src="{{ base_url() }}/js/jquery-3.3.1.min.js"></script>
     <script src="https://apis.google.com/js/client.js"></script>
     <script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
     <!--<script src="{{ base_url() }}/js/jquery-2.1.4.min.js"></script>-->
     <script src="{{ base_url() }}/js/js.cookie.js"></script>
-            <script src="{{ base_url() }}/dist/js/sweetalert2.all.min.js"></script>
-        <link rel="stylesheet" href="{{ base_url() }}/dist/css/sweetalert.css">
+    <script src="{{ base_url() }}/dist/js/sweetalert2.all.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="{{ base_url() }}/dist/css/sweetalert.css">
     <script src="{{ base_url() }}/js/ckeditor/ckeditor.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2S8lytX4gNMVNBRpckr7BH97pYmmljY4"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2S8lytX4gNMVNBRpckr7BH97pYmmljY4"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/rarylson/geochart-geojson/master/build/geochart-geojson.min.js"></script>
-
-    <meta property="og:url"                content="http://ollascomunes.gpvlima.com/" />
-    <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="Ollas comunes" />
-    <meta property="og:description"        content="Ollas comunes" />
-    <meta property="og:image"              content="{{base_url()}}/images/popup.jpg" />
-
+    <meta property="og:url"           content="http://ollascomunes.gpvlima.com/" />
+    <meta property="og:type"          content="article" />
+    <meta property="og:title"         content="Ollas comunes" />
+    <meta property="og:description"   content="Ollas comunes" />
+    <meta property="og:image"         content="{{base_url()}}/images/popup.jpg" />
 </head>
 <body>
     
